feat/clean-coding